--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">travel-relic</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">1383730425052689</string>
+    <string name="fb_login_protocol_scheme">fb1383730425052689</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
