--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">1383730425052689</string>
     <string name="fb_login_protocol_scheme">fb1383730425052689</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_base">BaseActivity</string>
 </resources>
