--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="facebook_app_id">1383730425052689</string>
     <string name="fb_login_protocol_scheme">fb1383730425052689</string>
     <string name="title_activity_base">BaseActivity</string>
+    <string name="title_activity_profile">ProfileActivity</string>
 </resources>
