--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="fb_login_protocol_scheme">fb1383730425052689</string>
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_album">AlbumActivity</string>
+    <string name="title_activity_view_post">ViewPostActivity</string>
+    <string name="title_activity_edit_post">EditPostActivity</string>
 </resources>
